@@ -16,58 +16,62 @@
 package dev.aoqia.leaf.loader.impl.util;
 
 import java.io.File;
-import java.net.JarURLConnection;
-import java.net.MalformedURLException;
-import java.net.URISyntaxException;
-import java.net.URL;
-import java.net.URLConnection;
+import java.net.*;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.security.CodeSource;
 
 public final class UrlUtil {
-	public static final Path LOADER_CODE_SOURCE = getCodeSource(UrlUtil.class);
+    public static final Path LOADER_CODE_SOURCE = getCodeSource(UrlUtil.class);
 
-	public static Path getCodeSource(URL url, String localPath) throws UrlConversionException {
-		try {
-			URLConnection connection = url.openConnection();
+    public static Path getCodeSource(URL url, String localPath) throws UrlConversionException {
+        try {
+            URLConnection connection = url.openConnection();
+            if (connection instanceof JarURLConnection) {
+                return asPath(((JarURLConnection) connection).getJarFileURL());
+            }
 
-			if (connection instanceof JarURLConnection) {
-				return asPath(((JarURLConnection) connection).getJarFileURL());
-			} else {
-				String path = url.getPath();
+            final URI uri = url.toURI();
+            final String path = uri.getPath();
 
-				if (path.endsWith(localPath)) {
-					return asPath(new URL(url.getProtocol(), url.getHost(), url.getPort(), path.substring(0, path.length() - localPath.length())));
-				} else {
-					throw new UrlConversionException("Could not figure out code source for file '" + localPath + "' in URL '" + url + "'!");
-				}
-			}
-		} catch (Exception e) {
-			throw new UrlConversionException(e);
-		}
-	}
+            if (path.endsWith(localPath)) {
+                final String basePath = path.substring(0, path.length() - localPath.length());
+                final URI baseUri = new URI(uri.getScheme(), uri.getUserInfo(), uri.getHost(),
+                    uri.getPort(), basePath, uri.getQuery(), uri.getFragment());
 
-	public static Path asPath(URL url) {
-		try {
-			return Paths.get(url.toURI());
-		} catch (URISyntaxException e) {
-			throw ExceptionUtil.wrap(e);
-		}
-	}
+                return Paths.get(baseUri);
+            }
 
-	public static URL asUrl(File file) throws MalformedURLException {
-		return file.toURI().toURL();
-	}
+            throw new UrlConversionException(
+                String.format("Could not figure out code source for file '%s' in URL '%s'!",
+                    localPath, url));
+        } catch (Exception e) {
+            throw new UrlConversionException(e);
+        }
+    }
 
-	public static URL asUrl(Path path) throws MalformedURLException {
-		return path.toUri().toURL();
-	}
+    public static Path asPath(URL url) {
+        try {
+            return Paths.get(url.toURI());
+        } catch (URISyntaxException e) {
+            throw ExceptionUtil.wrap(e);
+        }
+    }
 
-	public static Path getCodeSource(Class<?> cls) {
-		CodeSource cs = cls.getProtectionDomain().getCodeSource();
-		if (cs == null) return null;
+    public static URL asUrl(File file) throws MalformedURLException {
+        return file.toURI().toURL();
+    }
 
-		return asPath(cs.getLocation());
-	}
+    public static URL asUrl(Path path) throws MalformedURLException {
+        return path.toUri().toURL();
+    }
+
+    public static Path getCodeSource(Class<?> cls) {
+        CodeSource cs = cls.getProtectionDomain().getCodeSource();
+        if (cs == null) {
+            return null;
+        }
+
+        return asPath(cs.getLocation());
+    }
 }
